tests/baselines/reference/unicodeExtendedEscapesInStrings05_ES6.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,12): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,18): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,24): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,30): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,36): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,42): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,48): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,54): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,60): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,66): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts(2,72): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings05_ES6.ts (11 errors) ====
    
    var x = "\u{48}\u{65}\u{6c}\u{6c}\u{6f}\u{20}\u{77}\u{6f}\u{72}\u{6c}\u{64}";
               
!!! error TS1125: Hexadecimal digit expected.
                     
!!! error TS1125: Hexadecimal digit expected.
                           
!!! error TS1125: Hexadecimal digit expected.
                                 
!!! error TS1125: Hexadecimal digit expected.
                                       
!!! error TS1125: Hexadecimal digit expected.
                                             
!!! error TS1125: Hexadecimal digit expected.
                                                   
!!! error TS1125: Hexadecimal digit expected.
                                                         
!!! error TS1125: Hexadecimal digit expected.
                                                               
!!! error TS1125: Hexadecimal digit expected.
                                                                     
!!! error TS1125: Hexadecimal digit expected.
                                                                           
!!! error TS1125: Hexadecimal digit expected.
    